--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
         android:layout_centerVertical="true"
         android:layout_marginEnd="18dp"
-        android:background="#ffffff"
+        android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/btndattruoc"
         app:layout_constraintTop_toTopOf="@+id/btndattruoc"
@@ -44,7 +44,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:layout_toEndOf="@+id/btnkhampha"
-        android:background="#ffffff"
+        android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
 
         android:layout_marginStart="18dp"
         android:layout_toEndOf="@+id/btndattruoc"
-        android:background="#ffffff"
+        android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toEndOf="@+id/btndattruoc"
         app:layout_constraintTop_toTopOf="@+id/btndattruoc"
@@ -76,5 +76,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btndattruoc" />
+
+    <ImageButton
+        android:id="@+id/imageButtonDangNhap"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/enter" />
 
 </android.support.constraint.ConstraintLayout>
