--- a/app/src/main/res/layout/activity_dat_san.xml
+++ b/app/src/main/res/layout/activity_dat_san.xml
@@ -240,7 +240,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewNgay_datsan" />
 
         <TextView
-            android:id="@+id/textViewSoGio"
+            android:id="@+id/textViewSoGio_dt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="37dp"
