--- a/app/src/main/res/anim/scale_list.xml
+++ b/app/src/main/res/anim/scale_list.xml
@@ -5,6 +5,5 @@
         android:toXScale="1.0"
         android:fromYScale="0.8"
         android:toYScale="1.0"
-        android:duration="100"
-        />
+        android:duration="100" />
 </set>
