--- a/app/src/main/res/layout/activity_dat_san.xml
+++ b/app/src/main/res/layout/activity_dat_san.xml
@@ -18,14 +18,16 @@
         app:layout_constraintStart_toStartOf="@+id/checkBoxChonGio"
         app:layout_constraintTop_toTopOf="@+id/editTextSoGio" />
 
-    <EditText
+    <TextView
+        android:textAlignment="center"
+        android:textStyle="normal"
+        android:textSize="32sp"
+        android:textColor="#000000"
         android:id="@+id/editTextGio"
         android:layout_width="240dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:background="@drawable/layout_border"
         app:layout_constraintEnd_toEndOf="@+id/editTextNgay"
         app:layout_constraintTop_toBottomOf="@+id/editTextNgay" />
 
@@ -63,7 +65,6 @@
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <Spinner
-
         android:id="@+id/spinner1"
         android:layout_width="280dp"
         android:layout_height="44dp"
@@ -115,13 +116,17 @@
         app:layout_constraintBottom_toBottomOf="@+id/editTextNgay"
         app:layout_constraintEnd_toStartOf="@+id/editTextNgay" />
 
-    <EditText
+    <TextView
+
+        android:textStyle="normal"
+        android:textSize="32sp"
+        android:background="@drawable/layout_border"
+        android:textAlignment="center"
+        android:textColor="#000000"
         android:id="@+id/editTextNgay"
         android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="52dp"
         android:ems="10"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/spinner1"
         app:layout_constraintTop_toBottomOf="@+id/spinner1" />
 
@@ -188,7 +193,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:text="Ghi chú"
             app:layout_constraintStart_toStartOf="@+id/textViewTongTien_DatSan"
             app:layout_constraintTop_toBottomOf="@+id/textViewTongTien_DatSan" />
@@ -252,10 +257,10 @@
     </android.support.constraint.ConstraintLayout>
 
     <EditText
+        android:textAlignment="center"
         android:id="@+id/editTextSoGio"
         android:layout_width="240dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/editTextGio"
