--- a/app/src/main/res/layout/activity_xem__hinh.xml
+++ b/app/src/main/res/layout/activity_xem__hinh.xml
@@ -7,12 +7,12 @@
     tools:context=".Xem_Hinh_Activity">
 
     <GridView
+        android:id="@+id/gridViewHinhAnh"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:numColumns="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:numColumns="3"
-        android:id="@+id/gridViewHinhAnh"/>
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
