--- a/app/src/main/res/layout/item_dattruoc.xml
+++ b/app/src/main/res/layout/item_dattruoc.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
-    android:background="@drawable/layout_border"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/layout_border">
 
     <TextView
         android:id="@+id/textViewTenSan_DT"
-        android:textColor="@color/com_facebook_blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="173dp"
@@ -17,69 +15,70 @@
         android:layout_marginEnd="174dp"
         android:text="Tên Sân"
         android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@color/com_facebook_blue"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textViewLoaSan_dt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:text="Loại Sân"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTenSan_DT" />
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textViewNgayDat_dt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Ngày đặt"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="@+id/textViewLoaSan_dt"
         app:layout_constraintTop_toBottomOf="@+id/textViewLoaSan_dt" />
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textViewGioDat_dt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="75dp"
         android:text="Giờ đặt"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toEndOf="@+id/textViewNgayDat_dt"
         app:layout_constraintTop_toTopOf="@+id/textViewNgayDat_dt" />
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textViewSoGio_dt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Số giờ đặt"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="@+id/textViewNgayDat_dt"
         app:layout_constraintTop_toBottomOf="@+id/textViewNgayDat_dt" />
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textViewGhiChu_dt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Ghi chú"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="@+id/textViewSoGio_dt"
         app:layout_constraintTop_toBottomOf="@+id/textViewSoGio_dt" />
 
     <TextView
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textViewTinhTrang_dt"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Tình trạng thanh toán"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textViewGhiChu_dt"
         app:layout_constraintTop_toBottomOf="@+id/textViewGhiChu_dt" />
