--- a/app/src/main/res/layout/iterm_list_sanbong.xml
+++ b/app/src/main/res/layout/iterm_list_sanbong.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,12 +8,12 @@
         android:id="@+id/imageViewItemSanBong"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@drawable/layout_border"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background"
-        android:background="@drawable/layout_border"/>
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/textViewTen"
@@ -32,7 +31,7 @@
         android:id="@+id/textViewDiaChi"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        
+
         android:maxLines="3"
         android:singleLine="false"
         android:text="Địa chỉ"
