--- a/app/src/main/res/layout/activity_binh__luan_.xml
+++ b/app/src/main/res/layout/activity_binh__luan_.xml
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="100dp"
+        android:autofillHints=""
         android:ems="10"
+        android:hint="Nội dung bình luận"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -53,6 +55,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="Số sao"
         android:inputType="number"
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/editTextBinhLuan_bl" />
