--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -10,13 +10,11 @@
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="215dp"
-        android:layout_height="21dp"
+        android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="115dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="116dp"
-        android:layout_marginBottom="288dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,13 +35,17 @@
 
     <Button
         android:id="@+id/logout_button"
-        android:layout_width="213dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="3dp"
+        android:layout_width="215dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Đăng xuất"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/login_button"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/login_button"
-        app:layout_constraintTop_toBottomOf="@+id/login_button" />
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintVertical_bias="0.018" />
 
     <TextView
         android:id="@+id/textView_ten_user"
